@@ -594,6 +594,8 @@ CONFIG_OVMS_HW_CAN_TX_QUEUE_SIZE=20
 # System Options
 #
 CONFIG_OVMS_SYS_COMMAND_STACK_SIZE=6144
+CONFIG_OVMS_LOGFILE_QUEUE_SIZE=100
+CONFIG_OVMS_LOGFILE_TASK_PRIORITY=2
 
 #
 # Library Support
